--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "3.1.3",
+    "@prisma/client": "^6.9.0",
     "@tailwindcss/vite": "^4.1.8",
+    "better-auth": "^1.2.9",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.5",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
