--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "better-auth": "^1.2.9",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.5",
-    "prisma": "^6.9.0",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.0"
   }
 }
