--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.67"
   }
 }
